Update tail of message to prevent edges peing visible

--- a/src/components/MessageItem.css
+++ b/src/components/MessageItem.css
@@ -74,7 +74,7 @@
     content: '';
     position: absolute;
     bottom: 0px;
-    left: -8px;
+    left: -6px;
     width: 0;
     height: 0;
     border-style: solid;
